[m1] project setup - version setting 오타 수정

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ### openapi3
 openapi3Version=2.1.0
 ### kotest
-kotestVersion="5.6.2"
-kotestExtVersion="1.1.3"
+kotestVersion=5.6.2
+kotestExtVersion=1.1.3
 ### fixtureMonkey
-fixtureMonkeyVersion="0.5.0"
+fixtureMonkeyVersion=0.5.0
