[m2] project setup - set dependency core-domain module to core-api module

--- a/api/core-api/src/main/resources/application.yml
+++ b/api/core-api/src/main/resources/application.yml
@@ -2,3 +2,8 @@ springdoc:
   swagger-ui:
     tagsSorter: alpha
     path: /swagger-ui.html
+
+spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
