[m2] project setup - add kotest-extensions-now dependency & add gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -142,4 +142,6 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+/**/.jqwik-database
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,kotlin,gradle
